初始化阿波罗包

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "a67793581/apollo_client",
+    "name": "carlo/apollo_client",
     "description": "",
     "keywords": [
         "swagger",
